fixWhiteSpace

--- a/django/src/twofa/static/email_setup.css
+++ b/django/src/twofa/static/email_setup.css
@@ -2,4 +2,5 @@
 {
 	visibility: hidden;
 	color: rgb(255, 0, 0);
+	white-space: nowrap;
 }
